--- a/public/style.css
+++ b/public/style.css
@@ -2265,40 +2265,6 @@ ul.nav-dropdown-xxx {
     transform: translateY(-2px);
 }
 
-/* Media Query for smaller devices */
-@media (max-width: 576px) {
-    .responsive-btn-wrapper {
-        flex-direction: column;
-        align-items: center;
-        margin-top: 30px;
-        padding-top: 20px;
-    }
-
-    .address-btn {
-        width: 100%;
-        font-size: 16px;
-        padding: 12px;
-        margin-top: 10px;
-    }
-}
-
-/* Media Query for medium devices */
-@media (max-width: 768px) {
-    .responsive-btn-wrapper {
-        flex-direction: column;
-        align-items: center;
-        margin-top: 25px;
-        padding-top: 15px;
-    }
-
-    .address-btn {
-        width: 80%;
-        font-size: 16px;
-        padding: 12px;
-    }
-}
-
-
 .collapse-toggle {
     cursor: pointer;
     background: none;
@@ -2420,3 +2386,15 @@ ul.nav-dropdown-xxx {
     }
 }
 
+/* General Styles */
+.container {
+    max-width: 100%;
+}
+@media (max-width: 768px) {
+    .responsive-btn-wrapper {
+        display: none !important;
+    }
+    .address-btn {
+        display: none !important;
+    }
+}
