--- a/public/style.css
+++ b/public/style.css
@@ -2398,3 +2398,63 @@ ul.nav-dropdown-xxx {
         display: none !important;
     }
 }
+
+/* For mobile view */
+@media (max-width: 576px) {
+
+    .product-title {
+        font-size: 12px;
+    }
+    .frais-font {
+        font-size: 10px;
+    }
+    .price {
+        position: absolute;
+        bottom: 10px;
+        right: 10px;
+        font-size: 10px;
+    }
+    .product-image img {
+        max-width: 60px;
+        height: auto;
+    }
+
+    .card {
+        padding: 10px;
+        position: relative;
+    }
+    .delete-btn {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        padding: 5px;
+        font-size: 8px;
+    }
+    .delivery-info,
+    .delivery-fee,
+    .text-muted{
+        font-size: 11px;
+    }
+    .card.mb-3 {
+        margin-bottom: 10px;
+    }
+    .checkout-btn {
+        font-size: 10px;
+        padding: 8px 12px;
+    }
+
+    .table-total-checkout td {
+        font-size: 11px;
+        padding: 5px;
+    }
+
+    .table-total-checkout td b {
+        font-size: 10px;
+    }
+    .table-total-checkout td sup {
+        font-size: 10px;
+    }
+    .total-label, .total-value {
+        font-size: 9px;
+    }
+}
