--- a/public/style.css
+++ b/public/style.css
@@ -2506,3 +2506,34 @@ ul.nav-dropdown-xxx {
     }
 }
 
+.desktop-only {
+    display: block;
+}
+.mobile-only {
+    display: none;
+}
+@media (max-width: 768px) {
+    .widget-boxed-body {
+        max-height: 150px; /* Adjust the height as needed */
+        overflow-y: auto;
+    }
+     /* For WebKit browsers */
+     .widget-boxed-body::-webkit-scrollbar {
+        width: 8px;
+    }
+
+    .widget-boxed-body::-webkit-scrollbar-track {
+        background: #f1f1f1; /* Scrollbar track color */
+    }
+
+    .widget-boxed-body::-webkit-scrollbar-thumb {
+        background-color: #008080; /* Scrollbar thumb color */
+        border-radius: 20px; /* Optional: round the corners */
+    }
+
+    /* For Firefox */
+    .widget-boxed-body {
+        scrollbar-width: thin; /* Make the scrollbar thinner */
+        scrollbar-color: #008080 #f1f1f1; /* Thumb color and track color */
+    }
+}
