--- a/public/assets-admin/css/demo.css
+++ b/public/assets-admin/css/demo.css
@@ -175,3 +175,24 @@
     font-weight: 500;
     z-index: 1;
 }
+
+.custom-btn-d{
+    background-color: #ff4c4c; /* Custom red color */
+    color: white; /* Text color */
+    border: none; /* No border */
+    padding: 6px 10px; /* Adjust padding for a smaller button */
+    font-size: 14px; /* Font size */
+    border-radius: 4px; /* Slightly rounded corners */
+    display: flex; /* Flexbox for centering icon and text */
+    align-items: center; /* Center vertically */
+    transition: background-color 0.3s; /* Smooth background color transition */
+}
+
+.custom-btn-d:hover {
+    background-color: #e63939; /* Darker shade on hover */
+}
+
+.custom-btn-d .icon {
+    font-size: 14px; /* Icon size */
+    margin-right: 4px; /* Space between icon and text */
+}
