--- a/public/style.css
+++ b/public/style.css
@@ -2598,3 +2598,68 @@ input:checked + .slider:before {
     }
 }
 
+/* index-style */
+
+.carousel {
+    overflow: hidden;
+    width: 100%;
+    height: 450px;
+    position: relative;
+}
+
+.carousel-item {
+    display: none;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+}
+
+.carousel-item:first-child {
+    display: block;
+}
+
+.carousel-btn {
+    display: inline-block;
+    padding: 12px 24px;
+    font-size: 20px;
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0.6);
+    border-radius: 25px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    text-decoration: none;
+    transition: background-color 0.3s, transform 0.3s;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+
+}
+.carousel-btn:hover {
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0.8);
+    transform: translate(-50%, -50%) scale(1.05);
+}
+
+@media (max-width: 768px) {
+    .carousel {
+        height: 300px;
+    }
+
+    .carousel-btn {
+        padding: 10px 20px;
+        font-size: 18px;
+    }
+}
+
+@media (max-width: 480px) {
+    .carousel {
+        height: 250px;
+    }
+
+    .carousel-btn {
+        padding: 8px 16px;
+        font-size: 16px;
+    }
+}
+
