--- a/public/style.css
+++ b/public/style.css
@@ -2839,7 +2839,7 @@ input:checked + .slider:before {
 }
 
 .subcategory-card {
-    width: 80px;
+    width: auto;
     height: 60px;
     background-color: #fff;
     border: 1px solid #ddd;
