--- a/public/style.css
+++ b/public/style.css
@@ -1106,6 +1106,24 @@ body {
     margin-right: 3px;
     border:solid 1px #dadadaad;
 }
+#Selected_options {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: left;  /* Ensure vertical alignment */
+}
+
+.reset_select_option {
+    background-color: red !important;
+    color: white;
+    border-radius: 7px;
+    padding-left: 8px;
+    padding-right: 8px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    margin-left: 10px; /* Space between the reset button and the last option */
+}
+
 .color-shop-filtre{
     height: 20px;
     width: 20px;
@@ -1114,14 +1132,14 @@ body {
     border-radius: 100%;
     border:solid 1px rgba(0, 0, 0, 0.418);
 }
-.reset_select_option{
+/* .reset_select_option{
     background-color: red !important;
     color: white;  border-radius: 7px;
     padding-left: 5px;
     padding-right: 5px;
     margin-right: 3px;
     cursor: pointer;
-}
+} */
 .map-adresse{
     height: 300px;
     border-radius: 10px;
