--- a/public/style.css
+++ b/public/style.css
@@ -2788,6 +2788,13 @@ input:checked + .slider:before {
         padding: 0; /* Reduce padding to decrease internal spacing */
         gap: 1px;
     }
+    .fw-bolder {
+        white-space: nowrap; /* Prevent text from wrapping to a new line */
+        overflow: hidden;    /* Hide overflow text */
+        text-overflow: ellipsis; /* Show ellipsis (...) for overflowed text */
+        max-width: 100%;     /* Set a max width, adjust as needed */
+    }
+
 }
 .icon-modern {
     width: 80px; /* Increase icon size */
