--- a/public/style.css
+++ b/public/style.css
@@ -789,8 +789,9 @@ body {
 }
 
 .swal-wide {
-    background-color: #008080;
-    color: white;
+    background-color: white !important; /* Set background color to white */
+    border-radius: 10px; /* Add border radius for rounded corners */
+    box-shadow: 0 2px 15px rgba(0, 0, 0, 0.2);
 }
 
 .color-red {
