fix-scroller-categories

--- a/public/style.css
+++ b/public/style.css
@@ -1695,7 +1695,7 @@ ul.nav-dropdown-xxx {
 }
 
 .categories-list::-webkit-scrollbar-thumb {
-    background-color: #cccccc;
+    background-color: #008080;
     border-radius: 4px;
 }
 
