--- a/public/style.css
+++ b/public/style.css
@@ -3033,3 +3033,14 @@ input:checked + .slider:before {
 #acceptCond.soft-pulse-effect {
     animation: softPulse 2s infinite;
 }
+
+.flag-icon2 {
+    position: absolute;
+    height: 30px;
+    left: 10px;
+    top: 50%;
+    transform: translateY(-50%); /* Precise centering */
+    z-index: 10;
+    border-radius: 50px;
+}
+
