--- a/public/style.css
+++ b/public/style.css
@@ -2761,11 +2761,11 @@ input:checked + .slider:before {
 
 /* Category icon styling */
 .category-icon {
-    width: 30px; /* Smaller, uniform image size */
+    width: 30px;
     height: 30px;
-    object-fit: cover; /* Ensure image maintains its aspect ratio */
-    border-radius: 50%;
-    margin-bottom: 10px; /* Space between image and text */
+    object-fit: cover;
+    /* border-radius: 50%; */
+    margin-bottom: 10px;
 }
 
 /* Category text styling */
