--- a/public/style.css
+++ b/public/style.css
@@ -2425,15 +2425,27 @@ ul.nav-dropdown-xxx {
     transform: scale(1.1);
 }
 .text-muted-1 {
-    color:#636872 !important; }
+    color:#636872 !important;
+}
+
 @media (min-width: 768px) {
     .color-container {
-        max-width: 280px;
+        max-width: 230px;
     }
-
     .color-button {
-        width: 30px;
-        height: 30px;
+        width: 25px;
+        height: 25px;
+    }
+}
+
+@media (max-width: 480px) {
+    .color-container {
+        gap: 6px;
+        padding: 8px;
+    }
+    .color-button {
+        width: 25px;
+        height: 25px;
     }
 }
 
